--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@whiskeysockets/baileys": "6.5.0",
         "cache-manager": "5.2.4",
         "cheerio": "^1.0.0-rc.12",
+        "jimp": "^0.22.10",
         "jsdom": "^23.2.0",
         "node-fetch": "^3.3.2",
         "wa-sticker-formatter": "4.4.4"
