--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "@whiskeysockets/baileys": "6.5.0",
         "cache-manager": "5.2.4",
         "cheerio": "^1.0.0-rc.12",
-        "jimp": "^0.16.1",
+        "firebase-admin": "^12.0.0",
+        "jimp": "^0.22.10",
         "jsdom": "^23.2.0",
         "link-preview-js": "^3.0.5",
         "node-fetch": "^3.3.2",
