--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@whiskeysockets/baileys": "6.5.0",
         "cache-manager": "5.2.4",
         "cheerio": "^1.0.0-rc.12",
+        "express": "^4.19.2",
         "firebase": "^10.7.2",
         "firebase-admin": "^12.0.0",
         "jimp": "^0.16.1",
